@@ -96,6 +96,10 @@ Release date: TBA
 
 * ``fatal`` was added to the variables permitted in score evaluation expressions.
 
+* The default score evaluation now uses a floor of 0.
+
+  Closes #2399
+
 * Fix false positive - Allow unpacking of ``self`` in a subclass of ``typing.NamedTuple``.
 
   Closes #5312
